add calnedar text file functionality

--- a/blog.html
+++ b/blog.html
@@ -109,26 +109,12 @@
 
             <h2 class="content-head content-head-ribbon">Archives</h2>
 
-            <p>Jun 2015</p>
-            <p>May 2015</p>
-            <p>Apr 2015</p>
-            <p>Mar 2015</p>
-            <p>Feb 2015</p>
-            <p>Jan 2015</p>
-
-            <p>---</p>
-
-            <p>Dec 2014</p>
-            <p>Nov 2014</p>
-            <p>Oct 2014</p>
-            <p>Sep 2014</p>
-            <p>Aug 2014</p>
-            <p>Jul 2014</p>
-            <p>Jun 2014</p>
-            <p>May 2014</p>
-            <p>Apr 2014</p>
-            <p>Mar 2014</p>
-            <p>Feb 2014</p>
+                <p>
+                    <!--    loads "blogcal" text file to give the calendar list -->
+                    <script>window.MakeRequestForCalendar();</script>
+                    <div id='ResponseDivCal'>
+                    </div>              
+                </p>
 
         </div>
     </div>
