--- a/Jul2015.html
+++ b/Jul2015.html
@@ -183,8 +183,22 @@
 
             <div class="l-box-lrg pure-u-1 pure-u-md-3-5">
                 <h4>Connect</h4>
+
+
                 <p>
-                    Owner and Principle Consultant Philip Tyler, feel free to connect via Twitter, Email or LinkedIn as below.
+                Owner and Principle Consultant Philip Tyler, connect via Twitter, LinkedIn or Email as below.
+                </p>
+
+                <p>
+                "An IT visionary highly experienced in delivering Strategy across multiple sectors, focused on large scale Business Transformation, Change Management and Enterprise Architecture."
+                </P>
+
+                <p>
+                Providing consultancy for a variety of sectors over the last 20+ years including Retail, Banking and Finance, Government, Travel, Utilities, Telecommunications. These included a number of high profile clients BP, Shell, DERA, Barclays, Cisco, Scottish Water, Wetherspoons, Burberry, BAA, Easyjet.... and more.
+                </p>
+
+                <p>
+                Enterprise Data Architect, Technical Architect and Big Data Consultant using TOGAF, Agile, MongoDB, Horton Works, Cloudera, Informatica, Talend, CA Erwin and others...
                 </p>
 
 
