--- a/Oct2015.html
+++ b/Oct2015.html
@@ -84,23 +84,85 @@
 
                 <h3 class="content-subhead">
                     <i class="fa fa-mobile"></i>
-                    February 2014 News
+                    October News
                 </h3>
 
 
+
+
                 <p>
-                    <!--    loads blog text file 
-                    <script>window.MakeRequest();</script>
-                    <div id='ResponseDiv'>
-                    </div>              
-					-->
-     
-                <p>25/02/2014  - The first thing to point out is that myJarvis is a highly complex project and is at the very early stages of development at this point. To give you some understanding of the current position, a POC has been produced for the AI communications pieceand some rudimentary note take capabilities. The next stage being to provide a better UI experience and to build in a multi-threaded approach to the java 1.7.0.51 built program so far.  With a view to produce a video to generate some more interest in this project.</p>
+                    <p>
+                    31/10/2015 - OGG Camp 15 this weekend at Liverpool John Muir University, have great fun!!! #oggcamp https://t.co/kP3W3qqAXK
+                    </p>
 
-                <p>25/02/2014 - Jango is a much smaller project initially than myJarvis all though I have high hopes that this will provide a very usefull tool for industry. I hope to produce a jar file over the next week or so that can be downloaded and can be used to produce realtime test data into the MongdoDB</p>
+                    <p>
+                    29/10/2015 - A new proposed stable release of juju-core 1.25.0 is now available, integrate your cloud! #BigData https://t.co/ELxrrZ91Pv
+                    </p>
 
+                    <p>
+                    28/10/2015 - Oracle virtualbox 5.0.8 released this week!!! #Oracle https://t.co/Zb9y1WQY0N https://t.co/vGz8JaqnMX
+                    </p>
+
+                    <p>
+                    27/10/2015 - The Ubuntu Juju conference is coming soon - momentum is building.... https://t.co/88wRAfA120
+                    </p>
+
+                    <p>
+                    26/10/2015 - Ansible IT Automation instead of Puppet and Chef, bought by Red Hat for $100million! #redhatforum #BigData https://t.co/AWSX9Y7K3X
+                    <p/>
+
+                    <p>
+                    23/10/2015 - Linux MINT - the complete out-of-the-box distribution currently kicking it out of the ball park #linuxmint #ubuntu https://t.co/BGNIE6tPN6
+                    </p>
+
+                    <p>
+                    22/10/2015 - NOT just REALTIME Analytics, but REALTIME "EVERYTHING", this has to be the new trend and soon! #realtime #bigdata https://t.co/8dw4OF7MuX
+                    </p>
+
+                    <p>
+                    21/10/2015 - OpenBSD 5.8 released, highly secure and highly reliable OS #bigdata #OpenBSD https://t.co/8yCa0lUlAJ
+                    </p>
+
+                    <p>
+                    20/10/2015 - Looking at new database implementations and hear "highly scalable" and "cloud-ready" then your talking about #NoSQL https://t.co/FhQGnaKZY2
+                    </p>
+
+                    <p>
+                    19/10/2015 - Java in decline?Depends what you mean, if it's the JVM implementations then no way! Raw code?Yes!!! #scala #MongoDB http://t.co/FswEQZCGNd
+                    </p>
+
+                    <p>
+                    16/10/2015 - Number 1 developer trend on http://t.co/GCvs8qe7za is containers will rule the world #docker #bigdata http://t.co/iaE2Cn4pOx
+                    </p>
+
+                    <p>
+                    15/10/2015 - CA ERwin was announced as the market leader for data modelling for the 4th time #thebest #bigdata http://t.co/UenaHFDDF1
+                    </p>
+
+                    <p>
+                    14/10/2015 - Try out #Brotli new data compression tech developed by Google. 20-26% better compression ratios #bigdata #nginx http://t.co/qatTKJKXTT
+                    </p>
+
+                    <p>
+                    13/10/2015 - So @awscloud opens up its certification program to a wider audience as it makes the DevOps exam public.#AWS #Training http://t.co/ctZdvGiLJo
+                    </p>
+
+                    <p>
+                    13/10/2015 - @awscloud opens up it's certification program to a wider audience as it makes the DevOps exam public. #AWS #Training http://t.co/8X56kW97Tr
+                    </p>
+
+                    <p>
+                    08/10/2015 - Has Hadoop killed the MPP? Well maybe. #bigdata
+                    http://t.co/RWEab2WyK7
+                    </p>
+
+                    <p>
+                    06/10/2015 - Docker is the Apple equivalent for the software development market #bigdata #docker https://t.co/OOhm72h6Pj
+                    </p>
 
                 </p>
+
+
 
 
             </div>
