--- a/Sep2015.html
+++ b/Sep2015.html
@@ -84,7 +84,7 @@
 
                 <h3 class="content-subhead">
                     <i class="fa fa-mobile"></i>
-                    February 2014 News
+                    September News
                 </h3>
 
 
@@ -94,11 +94,38 @@
                     <div id='ResponseDiv'>
                     </div>              
 					-->
-     
-                <p>25/02/2014  - The first thing to point out is that myJarvis is a highly complex project and is at the very early stages of development at this point. To give you some understanding of the current position, a POC has been produced for the AI communications pieceand some rudimentary note take capabilities. The next stage being to provide a better UI experience and to build in a multi-threaded approach to the java 1.7.0.51 built program so far.  With a view to produce a video to generate some more interest in this project.</p>
 
-                <p>25/02/2014 - Jango is a much smaller project initially than myJarvis all though I have high hopes that this will provide a very usefull tool for industry. I hope to produce a jar file over the next week or so that can be downloaded and can be used to produce realtime test data into the MongdoDB</p>
+                    <p>
+                    24/09/2015 - GitLab is flat out better than GitHub, it says, and with $4M in new funding & secure enterprise offering looks good! http://t.co/7aOpeoPEgY
+                    </p>
 
+                    <p>
+                    18/09/2015 - AWS dropping price of Amazon Glacier storage by up to 36% for US East,US West, and Europe #BigData #AWS http://t.co/0TqR3WyeXe
+                    </p>
+
+                    <p>
+                    14/09/2015 - IBM add Enterprise level Node.js capabilities in its acquisition of StrongLoop. #BigData http://t.co/jS0o894Wfq
+                    </p>
+
+                    <p>
+                    10/09/2015 - Jenkins and Docker to become the standard for continuous delivery in #bigdata but most probably everything else too!https://t.co/q7C3NKh5mH
+                    </p>
+
+                    <p>
+                    09/09/2015 - New versions of iPad, AppleTV and the next iPhone being announced today, hold onto your hats! #BigData http://t.co/oQxY3cpR9N
+                    </p>
+
+                    <p>
+                    08/09/2015 - Docker + Container Tech is massive but it's the inside that counts! cAdvisor Prometheus.io,Scout/DataDog or Sematext http://t.co/61BaOyNUHN
+                    </p>
+
+                    <p>
+                    07/09/2015 - Elementary OS Freya Beta Is Out, Still the Most Beautiful OS in the World http://t.co/wS0duiwHga via @thesilviu
+                    <p>
+
+                    <p>
+                    02/09/2015 - Spark reads plain text,JSON,sequence files,protocol buffers and structured data through SparkSQL, and also Hbase, Cassandra, Elastic etc...
+                    </p>
 
                 </p>
 
@@ -145,7 +172,6 @@
 
             <div class="l-box-lrg pure-u-1 pure-u-md-3-5">
                 <h4>Connect</h4>
-
 
                 <p>
                 Owner and Principle Consultant Philip Tyler, connect via Twitter, LinkedIn or Email as below.
